# url-shortener-api

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  compose.yaml  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  main.py  models.py  settings.py
app/api/: router.py
app/api/url/: dependencies.py  router.py  services.py
migrations/: env.py
